<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.ac.cam.cares.jps</groupId>
	<artifactId>jps-base-lib</artifactId>
	<version>1.3.0</version>

	<packaging>jar</packaging>

	<build>
		<finalName>jps-base-lib</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<!-- This plugin edits the manifest file that goes inside the .jar file -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<!-- These properties add the copied dependencies to the classpath 
								so the .jar can find them at runtime. -->
							<addClasspath>true</addClasspath>
							<classpathPrefix>./lib/</classpathPrefix>
							<classpathLayoutType>repository</classpathLayoutType>
							<!--mainClass>com.cmclinnovations.py4j_wrapper.Py4jGateway</mainClass -->
							<useUniqueVersions>false</useUniqueVersions>
						</manifest>
					</archive>
					<outputDirectory>${project.build.directory}</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<!-- This plugin copies all of the .jar dependencies into a 'lib' folder 
					in the target directory. -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-jar-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<useRepositoryLayout>true</useRepositoryLayout>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-version>3.2.9.RELEASE</spring-version>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>29.0-jre</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring-version}</version>
		</dependency>
		<!-- Spring MVC for Servlet Environments (depends on spring-core, spring-beans, 
			spring-context, spring-web) Define this if you use Spring MVC with a Servlet 
			Container such as Apache Tomcat (org.springframework.web.servlet.*) -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring-version}</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch.agentproxy.jsch</artifactId>
			<version>0.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch.agentproxy.pageant</artifactId>
			<version>0.0.9</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180813</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.6.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-arq</artifactId>
			<version>3.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-querybuilder -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-querybuilder</artifactId>
			<version>3.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-rdfconnection -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-rdfconnection</artifactId>
			<version>3.16.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-shaded-guava -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-shaded-guava</artifactId>
			<version>3.16.0</version>
		</dependency>

		<dependency>
			<groupId>org.orbisgis</groupId>
			<artifactId>cts</artifactId>
			<version>1.5.1</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>2.5.2</version>
		</dependency>
		<dependency>
			<groupId>jakarta.ws.rs</groupId>
			<artifactId>jakarta.ws.rs-api</artifactId>
			<version>2.1.5</version>
			<scope>compile</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-jdbc-driver-mem -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-jdbc-driver-mem</artifactId>
			<version>3.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-jdbc-core -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-jdbc-core</artifactId>
			<version>3.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-jdbc-driver-remote -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-jdbc-driver-remote</artifactId>
			<version>3.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-jdbc -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-jdbc</artifactId>
			<version>3.16.0</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.5.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>3.5.7</version>
			<scope>test</scope>
		</dependency>
		<!-- https://github.com/owlcs/ont-api/wiki/Maven -->
		<dependency>
			<groupId>com.github.owlcs</groupId>
			<artifactId>ontapi</artifactId>
			<version>2.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>
		<dependency>
			<groupId>net.sf.py4j</groupId>
			<artifactId>py4j</artifactId>
			<version>0.10.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring-version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-tools-federation -->
		<dependency>
	    	<groupId>org.eclipse.rdf4j</groupId>
	    	<artifactId>rdf4j-tools-federation</artifactId>
	    	<version>3.1.0</version>
		</dependency>
		<!-- jooq for constructing SQL queries -->
		<dependency>
		    <groupId>org.jooq</groupId>
		    <artifactId>jooq</artifactId>
		    <version>3.14.9</version>
		</dependency>
		<!-- for constructing sparql queries, used in time series -->
		<dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-sparqlbuilder</artifactId>
            <version>3.4.3</version>
        </dependency>
		<!-- driver for connecting to postgresql -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.22</version>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.15.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>1.15.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.15.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>


</project>